# image-extractor

./: .gitignore  README.md  organize_results.py  requirements.txt
image_extractor/: .env_local  README.md  dependencies.py  pyproject.toml  test.ps1
image_extractor/files/: 2024-08-23-gift-for-the-soul.jfif  2024-08-24-gift-for-the-soul.jfif  2024-08-29-gift-for-the-soul.jfif  2024-09-05-gift-for-the-soul.jfif  2024-10-02-gift-for-the-soul.jfif  2024-10-23-gift-for-the-soul.jfif  2024-11-04-gift-for-the-soul.jfif  google_2024-08-22-gift-for-the-soul.json  google_2024-08-23-gift-for-the-soul.json  google_2024-08-24-gift-for-the-soul.json  google_2024-08-25-gift-for-the-soul.json  google_2024-08-27-gift-for-the-soul.json  google_2024-08-28-gift-for-the-soul.json  google_2024-08-29-gift-for-the-soul.json  google_2024-08-31-gift-for-the-soul.json  google_2024-09-03-gift-for-the-soul.json  google_2024-09-05-gift-for-the-soul.json  google_2024-09-09-gift-for-the-soul.json  google_2024-09-12-gift-for-the-soul.json  google_2024-09-24-gift-for-the-soul.json  google_2024-10-02-gift-for-the-soul.json  google_2024-10-05-gift-for-the-soul.json  google_2024-10-09-gift-for-the-soul.json  google_2024-10-10-gift-for-the-soul.json  google_2024-10-15-gift-for-the-soul.json  google_2024-10-21-gift-for-the-soul.json  google_2024-10-23-gift-for-the-soul.json  google_2024-10-29-gift-for-the-soul.json  google_2024-11-02-gift-for-the-soul.json  google_2024-11-04-gift-for-the-soul.json  openai_2024-08-22-gift-for-the-soul.json  openai_2024-08-23-gift-for-the-soul.json  (+21 more)
(+499 files in other folders)
