[tool.poetry]
name = "image-extractor"
version = "0.1.0"
description = "Extracts information from images."
authors = ["Gil Fernandes <gil.fernandes@onepointltd.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
langchain = "0.3.5"
langchain-openai = "^0.2.2"
python-dotenv = "^1.0.1"
langchain-google-genai = "^2.0.3"
click = "^8.1.7"

[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
