[tool.poetry]
name = "image-extractor"
version = "0.1.0"
description = "Extracts information from images."
authors = ["Gil Fernandes <gil.fernandes@onepointltd.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
langchain = "0.3.25"
langchain-openai = "^0.3.3"
python-dotenv = "^1.0.1"
langchain-google-genai = "^2.0.3"
click = "^8.1.7"
pandas = "^2.2.3"
langchain-google-vertexai = "2.0.11"
langchain-anthropic = "0.3.9"
langchain-community = "0.3.24"
langchain-deepseek-official = "0.1.0"
langchain-mistralai = "0.2.10"
langchain-ollama = "0.3.3"
google-cloud-vision = "^3.7.0"
scikit-learn = "^1.5.2"
numpy = "^2.1.0"
pydantic = "^2.7.0"
python-levenshtein = "0.26.1"

[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
